2015-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Add STANDARD_IA storage_class

2015-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.h (StorageClass): Add S3_SC_STANDARD_IA.
	* device-src/s3.c: Fix for STANDARD_IA
	* server-src/amcheck.c: Fix message argument name.

2015-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c Default SPARSE value is NO if tar < 1.28

2015-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Use '--blocking-factor 64' when creating
	  a tar file

2015-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Change message for 2800217. Allow
	  substitution in the hint field
	* common-src/amutil.c: Change the
	          "running as user \"%s\" instead of \"%s\""" message
	* server-src/amcheck.c: Fix for running user

2015-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: Do not look for storage when recovery is
	  from a holding disk

2015-10-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Add debugging
	* perl/Amanda/FetchDump.pm: Send the statefile earlier, trap error

2015-10-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Remember the level of the last
	  backup and use it to find the corresponding statefile

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix for taper crash
	* server-src/dumper.c: Fix compatibility issue

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: Filter /trailing garbage ignored/

2015-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c: gzip exit 2 is not an error
	* installcheck/Amanda_Xfer.pl: test it

2015-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski
	* man/xml-source/tapelist.5.xml: Fix duplicate word
